# frictionless-dataframe

./: Dockerfile  README.md  poetry.toml  pyproject.toml
.devcontainer/: devcontainer.json
frictionless_dataframe/: main.py
